--- a/themes/rhds/layouts/partials/collaborate.html
+++ b/themes/rhds/layouts/partials/collaborate.html
@@ -4,7 +4,7 @@
         <h2>Interested in contributing to these docs?</h2>
         <p>Collaboration drives progress. Help improve our documentation <a href="https://www.redhat.com/en/open-source/red-hat-way">The Red Hat Way</a>.</p>
         <div class="cta-group">
-          <rh-cta variant="brick"><pf-icon set="fab" icon="github"></pf-icon> <a href="https://github.com/rh-mobb/documentation" data-analytics-linktype="cta">GitHub</a></rh-cta>
+          <rh-cta variant="brick"><rh-icon set="social" icon="github"></rh-icon> <a href="https://github.com/rh-mobb/documentation" data-analytics-linktype="cta">GitHub</a></rh-cta>
           {{- if .Site.Params.editURL }}
             {{- $File := .File }}
             {{- $Site := .Site }}
