fix: add prism-esm to production importmap

--- a/themes/rhds/layouts/partials/head/importmap.html
+++ b/themes/rhds/layouts/partials/head/importmap.html
@@ -60,6 +60,8 @@
           "lit-element/lit-element.js": "https://www.redhatstatic.com/dssf-001/v2/lit-element@4.2.0/lit-element.js",
           "lit-html": "https://www.redhatstatic.com/dssf-001/v2/lit-html@3.3.0/lit-html.js",
           "lit-html/": "https://www.redhatstatic.com/dssf-001/v2/lit-html@3.3.0/",
+          "prism-esm": "https://www.redhatstatic.com/dssf-001/v2/prism-esm@1.29.0-fix.6/prism.js",
+          "prism-esm/components/": "https://www.redhatstatic.com/dssf-001/v2/prism-esm@1.29.0-fix.6/components/",
           "tslib": "https://www.redhatstatic.com/dssf-001/v2/tslib@2.8.1/tslib.es6.mjs"
       }
     }
